<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/layout_dialog_connect_broker"
    android:layout_width="300dp"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="4dp" >

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/green1"
        android:text="@string/dialog_connection_info"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        />
   <LinearLayout
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:orientation="horizontal" >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="#000000"
            android:textSize="14sp"
            android:layout_weight="2"
            android:textStyle="bold"
            android:text="@string/dialog_client_id" />

        <EditText
            android:id="@+id/dialog_edit_client_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="#000000"
            android:layout_weight="1"
            android:hint="@string/hint_unique_id"
            android:textSize="12sp" />

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="#000000"
            android:textSize="14sp"
            android:layout_weight="2"
            android:textStyle="bold"
            android:text="@string/dialog_server"/>

        <EditText
            android:id="@+id/dialog_edit_server"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="#000000"
            android:hint="@string/hint_server"
            android:layout_weight="1"
            android:textSize="12sp" />

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="#000000"
            android:textSize="14sp"
            android:layout_weight="2"
            android:textStyle="bold"
            android:text="@string/dialog_port"/>

        <EditText
            android:id="@+id/dialog_edit_port"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="#000000"
            android:layout_weight="1"
            android:hint="@string/hint_port"
            android:text="@string/hint_port"
            android:textSize="12sp" />

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/btn_cancel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="#000000"
            android:textSize="14sp"
            android:layout_weight="1"
            android:textStyle="bold"
            android:text="@string/cancel_btn" />

        <Button
            android:id="@+id/btn_connect"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="#000000"
            android:textSize="14sp"
            android:layout_weight="1"
            android:textStyle="bold"
            android:text="@string/connect_btn" />

    </LinearLayout>
</LinearLayout>